prompt questions and made svg file.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/blackshane/logo-maker/issues"
   },
-  "homepage": "https://github.com/blackshane/logo-maker#readme"
+  "homepage": "https://github.com/blackshane/logo-maker#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
